# Merch-Insights

./: .gitignore  profiling.ipynb  pyproject.toml  test.ipynb
Category Health/: Indexing.ipynb
Category Health/sql/: 0-item-range.sql  1-demographic-segments.sql
NZ RR/: profiling.ipynb
NZ RR/400 GROWING MEDIA/Association data generate/: Generate association data.ipynb  association_functions.py
NZ RR/400 GROWING MEDIA/Community detection/: network (300 GREENLIFE sub depts).ipynb  network (ALL sub depts).ipynb  network.ipynb  segment_exposure_all.csv  segment_exposure_all_regrouped.csv  segment_pair_all.csv  segment_pair_greenlife_only.csv  top_sub_dept_transaction.csv
NZ RR/400 GROWING MEDIA/General insights/: profiling.ipynb
NZ RR/400 GROWING MEDIA/Profiling/: Outdoor_camping_insight.R  Outdoor_camping_insights_jupyter.ipynb  set_up.R
NZ RR/400 GROWING MEDIA/Purchase path/: purchase_path.ipynb  setup.py
NZ RR/400 RODENT PEST CONTROL/Association data generate/: Generate association data.ipynb
NZ RR/400 RODENT PEST CONTROL/Community detection/: network.ipynb  segment_exposure_all.csv  segment_exposure_all_regrouped.csv  segment_pair_all.csv  top_sub_dept_transaction.csv
NZ RR/400 RODENT PEST CONTROL/General insights/: Insight.R  Insights.ipynb  au_demographic_segments_details.csv  profiling.ipynb
NZ RR/400 RODENT PEST CONTROL/Purchase path/: purchase_path.ipynb
NZ RR/sql/: 0-item-range.sql  5-commercial-industry-segment.sql
NZ pest control & growing media/: profiling.ipynb
NZ pest control & growing media/300 PEST CONTROL/Association data generate/: Generate association data.ipynb
NZ pest control & growing media/300 PEST CONTROL/Community detection/: network.ipynb
NZ pest control & growing media/300 PEST CONTROL/Purchase path/: purchase_path.ipynb
NZ pest control & growing media/400 GROWING MEDIA/Association data generate/: Generate association data.ipynb
NZ pest control & growing media/sql/: 0-item-range.sql  1-demographic-segments.sql  2-diy-proficiency.sql  3-rfm.sql  4-commercial-bot.sql  5-commercial-industry-segment.sql  6-location.sql  7-location-region.sql  8-location-metro-regional.sql  nz.ipynb
Price increase timber panels/: Item list.xlsx  copurchase_results.csv  panels.ipynb  test.ipynb
Price increase timber panels/sql/: basket-metrics.sql  class-transactions.sql  co-purchases.sql  copurchases.sql  item-hierarchy.sql
Skylight cross shop/sql/: Generate association data.ipynb  Labelled_class_segment.csv  Network.ipynb  association_functions.py  labelled_df.csv  segment_exposure.csv  segment_pair.csv
sql/: 0-item-range.sql  1-demographic-segments.sql  2-diy-proficiency.sql  3-rfm.sql  4-commercial-bot.sql  5-commercial-industry-segment.sql  6-location.sql  7-location-region.sql  8-location-metro-regional.sql  item-range.sql
(+118 files in other folders)
