[tool.poetry]
name = "merch-insights-analysis"
version = "0.1.0"
description = ""
authors = ["Dhruv Piers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
plotly = "^5.20.0"
pyarrow = "^15.0.2"
snowflake-connector-python = "^3.8.1"
python-dotenv = "^1.0.1"
nbformat = "^5.10.4"
pre-commit = "^3.7.0"
ipykernel = "^6.29.4"
jinja2 = "^3.1.4"
openpyxl = "^3.1.4"
xlrd = "^2.0.1"
ds-common-utils = "^0.2.3"
geopy = "^2.4.1"
geopandas = "^1.0.1"
geodatasets = "^2024.8.0"
folium = "^0.17.0"
matplotlib = "^3.9.2"
mapclassify = "^2.8.1"
python-louvain = "^0.16"

[[tool.poetry.source]]
name = "posit-local-python-repo"
url = "https://rstudio-pm.dna.bunnings.com.au/local-python-repo/latest/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"